error.txt
    Checking zeroize v1.8.2
   Compiling stellar-xdr v22.1.0
    Checking stellar-strkey v0.0.9
   Compiling base64 v0.13.1
    Checking ethnum v1.5.2
   Compiling indexmap v1.9.3
    Checking lock_api v0.4.14
   Compiling soroban-env-host v22.1.3
   Compiling sha2 v0.10.9
    Checking anstream v0.6.21
    Checking regex-automata v0.4.14
   Compiling darling_macro v0.20.11
   Compiling soroban-env-common v22.1.3
    Checking windows-sys v0.59.0
    Checking parking_lot_core v0.9.12
    Checking winapi v0.3.9
   Compiling prettyplease v0.2.37
   Compiling soroban-builtin-sdk-macros v22.1.3
   Compiling soroban-sdk-macros v22.0.10
   Compiling roff v0.2.2
    Checking strsim v0.11.1
    Checking hex-literal v0.4.1
    Checking allocator-api2 v0.2.21
   Compiling rayon-core v1.13.0
   Compiling unicode-segmentation v1.12.0
   Compiling static_assertions v1.1.0
   Compiling anyhow v1.0.102
    Checking hashbrown v0.12.3
error[E0463]: can't find crate for `zeroize_derive`
   --> C:\Users\nwaug\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\zeroize-1.8.2\src\lib.rs:246:9
    |
246 | pub use zeroize_derive::{Zeroize, ZeroizeOnDrop};
    |         ^^^^^^^^^^^^^^ can't find crate

error[E0432]: unresolved import `crate::Zeroize`
 --> C:\Users\nwaug\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\zeroize-1.8.2\src\x86.rs:3:43
  |
3 | use crate::{atomic_fence, volatile_write, Zeroize};
  |                                           ^^^^^^^

Some errors have detailed explanations: E0432, E0463.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `zeroize` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
